force-app/main/default/objects/Lead_Transfer_History__c/Lead_Transfer_History__c.object-meta.xml
<CustomObject>
    <label>Lead Transfer History</label>
    <nameField>
        <displayFormat>LT-{0000}</displayFormat>
        <label>Lead Transfer History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Transfer History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>