force-app/main/default/objects/Lead_Transfer_History__c/fields/Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code__c</fullName>
    <formula>Requested_By__r.Contact.Dealer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Code</label>
    <type>Text</type>
</CustomField>