force-app/main/default/objects/Lead_Transfer_History__c/fields/Old_Owner__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Transfer_History</relationshipName>
    <type>Lookup</type>
</CustomField>