force-app/main/default/objects/Lead_Transfer_History__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lead_Transfer_History2</relationshipName>
    <type>Lookup</type>
</CustomField>